# book_shop_drf_p23

./: .gitignore  Makefile  TODO  pyproject.toml
apps/: __init__.py  urls.py
apps/shared/: models.py
apps/shops/: admin.py  models.py  serializers.py  task.py  urls.py  views.py
apps/shops/fixtures/: country.json
apps/shops/migrations/: 0001_initial.py
apps/users/: admin.py  authentication.py  email_service.py  models.py  serializers.py  task.py  urls.py  views.py
apps/users/fixtures/: country.json
apps/users/management/commands/: generate_data.py
apps/users/migrations/: 0001_initial.py
root/: celery.py  settings.py  urls.py
